<resources>
    <string name="app_name">Kag-Aid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="footnote_credit">© 2018 Kag-Aid</string>

    <!--Patient Gender-->
    <array name="patient_gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <!--Logs-->
    <array name="logs">
        <item>Date</item>
        <item>Time</item>
        <item>Patient Name</item>
        <item>Employee Name</item>
    </array>
    <string name="logError">There are no logs for today yet</string>

    <!-- Skin Illness String Res -->
    <string name="skinIllness_label">Skin Illnesses</string>
    <string name="skinIllness_desc">Click on an item to see its description and treatments.</string>
    <string name="openSkinIllness">Open</string>
    <string name="copyright">© 2018 Kag-Aid</string>
    <string name="skinIllness_row_pageLabel">Skin Illness</string>
    <string name="skinIllness_row_symptoms">Symptoms</string>

    <!-- Skin Illness Page String Res -->
    <string name="skinIllness_page_name">Skin Illness Name</string>
    <string name="skinIllness_page_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="skinIllness_page_los_label">Level of Severity</string>
    <string name="skinIllness_page_causes_label">Causes</string>
    <string name="treatments_page_label">Treatments</string>
    <string name="treatments_list">Other Treatments</string>
    <string name="level_of_severity">Level of Severity</string>

    <!-- Treatments Page String Res -->
    <string name="treatments_medicine_name">Medicine Name</string>
    <string name="treatments_medicine_brand">Brand</string>
    <string name="treatments_medicine_dosage">Dosage</string>

    <!-- Camera Details -->
    <string name="new_memory_title_hint">Title of Image</string>
    <string name="new_memory_btn_cancel">Cancel</string>
    <string name="new_memory_btn_save">Proceed</string>
    <string name="activity_main_empty_view_text">No photos of skin illness photos yet.</string>
    <string name="new_memory_btn_gallery">Upload from gallery</string>
    <string name="new_memory_btn_camera">Use camera</string>
    <string name="title_activity_gallery">Gallery</string>

    <!-- Google Maps -->
    <string name="google_maps_key">AIzaSyDTVnfmn2Wn7vtm3Q0-lVSk0VM3V0KvnxQ</string>

    <!--- Homepage -->
    <string name="homepage_desc">
        \t\t\tKAG-AID is a skin illness identification system, both in mobile and web application that would give aid to Barangay Health Centers in matters of
        identifying the scanned skin illness with the relevant treatment, and
        able to monitor their patient's information.
    </string>
    <string name="homepage_title">
        Kag-Aid: A Skin Illness Identification and Patient Monitoring System
    </string>
    <string name="homepage_instruction">
        Click on the logo to view patients
    </string>

    <!--- Patient Records -->
    <string name="patient_rec_desc">
        Choose/Add a patient for skin illness identification.
    </string>

    <string name="patient_rec_desc_instruction">
        Long press then slide down to update patient's information
    </string>

    <string name="patient_no_records">
        No Patient Record
    </string>

    <!--- Patient Information -->
    <string name="patient_info_dec">
        The patient personal information are shown here.
    </string>

    <!--- Logs Information -->
    <string name="logs_info_dec">
        The system's logs are shown here.
    </string>
</resources>
