<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/medicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/treatments_medicine_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/medicineBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/treatments_medicine_brand" />

    <TextView
        android:id="@+id/medicineDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/treatments_medicine_dosage" />

</LinearLayout>