<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skin_illness_page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/skinIllness_picture"
        android:layout_width="173dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/skinIllnessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="214dp"
        android:text="@string/skinIllness_page_name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skinIllnessDesc"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skinIllnessName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/skinIllness_page_desc"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/skinIllnessDesc"
        android:layout_marginBottom="290dp"
        android:gravity="right"
        android:text="@string/skinIllness_page_los_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skinIllness_severity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/skinIllness_picture"
        android:layout_alignTop="@+id/textView5"
        android:text="TextView"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="258dp"
        android:text="@string/skinIllness_page_causes_label"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_alignRight="@+id/textView5" />

    <TextView
        android:id="@+id/skinIllness_causes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/skinIllness_severity"
        android:layout_alignTop="@+id/textView7"
        android:text="TextView"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/skinIllness_severity" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="132dp"
        android:layout_height="133dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignTop="@+id/imageButton3"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="132dp"
        android:layout_height="133dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/skinIllness_severity"
        android:layout_marginBottom="100dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="© 2018 Kag-Aid"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>