<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/new_memory_selected_image"
        android:layout_width="316dp"
        android:layout_height="236dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_photo_filter_black_24dp" />

    <EditText
        android:id="@+id/new_memory_title"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_memory_selected_image"
        android:layout_centerHorizontal="true"
        android:hint="@string/new_memory_title_hint" />

    <Button
        android:id="@+id/new_memory_cancel"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:background="@drawable/loginshape"
        android:onClick="cancel"
        android:text="@string/new_memory_btn_cancel" />

    <Button
        android:id="@+id/new_memory_save"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:background="@drawable/loginshape"
        android:onClick="save"
        android:text="@string/new_memory_btn_save" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="415dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="© 2018 Kag-Aid"
        android:textColor="@color/textHomepage1"
        android:textSize="14sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_marginEnd="97dp"
        android:background="@drawable/buttonshape"
        android:onClick="openCamera"
        app:srcCompat="@drawable/ic_camera_enhance_black_24dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="77dp"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="261dp"
        android:layout_marginStart="93dp"
        android:background="@drawable/buttonshape"
        android:onClick="openGallery"
        app:srcCompat="@drawable/ic_photo_library_black_24dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="294dp"
        android:text="Choose Option:"/>

</RelativeLayout>