<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkinIllness.TreatmentsPage">

    <TextView
        android:id="@+id/treatments_pageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/treatments_page_label"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skin_illness_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ListViewTreatments"
        android:layout_marginTop="57dp"
        android:text="for Skin_Illness_name" />

    <ImageView
        android:id="@+id/treatments_image"
        android:layout_width="107dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/skin_illness_name"
        android:layout_marginTop="86dp"
        app:srcCompat="@drawable/treatments_treatment_icon" />

    <TextView
        android:id="@+id/medicine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/treatments_image"
        android:layout_marginStart="141dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/medicine_name"
        android:layout_marginTop="122dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/dosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/medicine_name"
        android:layout_marginTop="153dp"
        android:text="TextView" />

    <ListView
        android:id="@+id/ListViewTreatments"
        android:layout_width="331dp"
        android:layout_height="273dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/textHomepage1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/skin_illness_name"
        android:layout_marginTop="209dp"
        android:text="@string/treatments_list"
        android:textStyle="bold" />
</RelativeLayout>